--- a/Investrosite/CSS/StyleSheet1.css
+++ b/Investrosite/CSS/StyleSheet1.css
@@ -331,3 +331,38 @@ header {
     height: auto;
     margin: 20px;
 }
+body {
+    background: #eee
+}
+
+.date {
+    font-size: 11px
+}
+
+.comment-text {
+    font-size: 12px
+}
+
+.fs-12 {
+    font-size: 12px
+}
+
+.shadow-none {
+    box-shadow: none
+}
+
+.name {
+    color: #007bff
+}
+
+.cursor:hover {
+    color: blue
+}
+
+.cursor {
+    cursor: pointer
+}
+
+.textarea {
+    resize: none
+}
