--- a/Investrosite/Views/Home/Index.cshtml
+++ b/Investrosite/Views/Home/Index.cshtml
@@ -1,31 +1,23 @@
-﻿@{
+﻿@model Investrosite.Models.Database.Post
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+<div class="container mt-5">
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-8">
+            <div class="d-flex flex-column comment-section">
+                <h3>Share Your Idea</h3>
+                <div class="bg-light p-2">
+                    <form method="POST" action="">
+                        <div class="d-flex flex-row align-items-start"><textarea name="Description" type="text" class="form-control ml-1 shadow-none textarea"></textarea></div>
+                        <input type="text" name="eid" value=1 class="form-control" id="formGroupExampleInput2">
+                        <div class="mt-2 text-right"><input type="submit" name="submit" value="Post" class="btn btn-primary btn-sm shadow-none"></div>
+                        </form>
+                        <p>@ViewBag.Msg</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
