--- a/Investrosite/Views/Home/Index.cshtml
+++ b/Investrosite/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Investrosite.Models.Database.Post
+﻿@model List<Investrosite.Models.Database.Post>
 @{
     ViewBag.Title = "Home Page";
 }
@@ -7,17 +7,22 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-center row">
         <div class="col-md-8">
-            <div class="d-flex flex-column comment-section">
-                <h3>Share Your Idea</h3>
-                <div class="bg-light p-2">
-                    <form method="POST" action="">
-                        <div class="d-flex flex-row align-items-start"><textarea name="Description" type="text" class="form-control ml-1 shadow-none textarea"></textarea></div>
-                        <input type="text" name="eid" value=1 class="form-control" id="formGroupExampleInput2">
-                        <div class="mt-2 text-right"><input type="submit" name="submit" value="Post" class="btn btn-primary btn-sm shadow-none"></div>
-                        </form>
-                        <p>@ViewBag.Msg</p>
+            <a class="btn btn-primary btn-sm shadow-none" href="/home/post">Create Post</a>
+            @foreach (var p in Model)
+            {
+                <div class="d-flex flex-column comment-section">
+                    <div class="bg-white p-2">
+                        <div class="d-flex flex-row user-info">
+
+                            <div class="d-flex flex-column justify-content-start ml-2"><span class="d-block font-weight-bold name">@p.Name</span></div>
+                        </div>
+                        <div class="mt-2">
+                            <p class="comment-text">@p.Description</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <hr />
+            }
+
         </div>
-    </div>
 </div>
