--- a/Investrosite/Views/user/login.cshtml
+++ b/Investrosite/Views/user/login.cshtml
@@ -21,7 +21,7 @@
             <div class="swap_between_login_register">
                 <p>@ViewBag.Msg</p>
                 <p>Don't have any account?</p>
-                <u><a href="">Create an account</a></u>
+                <u><a href="register">Create an account</a></u>
             </div>
         </form>
     </div>
