--- a/Investrosite/Views/user/Register.cshtml
+++ b/Investrosite/Views/user/Register.cshtml
@@ -41,11 +41,23 @@
 
 
             </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" value="Entrepreneur" name="Role" id="flexRadioDefault1" checked>
+                <label class="form-check-label" for="flexRadioDefault1">
+                    Entrepreneur
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="Role" value="Investor" id="flexRadioDefault2" >
+                <label class="form-check-label" for="flexRadioDefault2">
+                    Investor
+                </label>
+            </div>
             <p>@ViewBag.Msg</p>
             <input type="submit" name="submit" value="REGISTER" class="btn btn-primary login_button">
             <div class="swap_between_login_register">
                 <p>Already have an account?</p>
-                <u><a href="">Sign in here</a></u>
+                <u><a href="/user/login">Sign in here</a></u>
             </div>
         </form>
     </div>
