--- a/Investrosite/Views/Admin/CreateAdmin.cshtml
+++ b/Investrosite/Views/Admin/CreateAdmin.cshtml
@@ -1,13 +1,13 @@
-﻿@model Investrosite.Models.Database.Manager
+﻿@model Investrosite.Models.Database.Admin
 @{
-    ViewBag.Title = "CreateManager";
+    ViewBag.Title = "CreateAdmin";
 }
 
-<h2>Create Manager</h2>
+<center><h2>Create Admin</h2></center>
 
 <div class="register_page">
     <div class="register_body">
-        <form method="POST" action="/admin/CreateManager">
+        <form method="POST" action="/admin/CreateAdmin">
 
             <div class="mb-3">
                 <label for="formGroupExampleInput" class="form-label">Full Name :</label>
@@ -42,9 +42,9 @@
 
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" value="Manager" name="Role" id="flexRadioDefault1" checked>
+                <input class="form-check-input" type="radio" value="Admin" name="Role" id="flexRadioDefault1" checked>
                 <label class="form-check-label" for="flexRadioDefault1">
-                    Manager
+                    Admin
                 </label>
             </div>
             <p>@ViewBag.Msg</p>
