--- a/Investrosite/Views/Shared/_Layout.cshtml
+++ b/Investrosite/Views/Shared/_Layout.cshtml
@@ -25,11 +25,11 @@
                 <li><a href="/home/index">Home</a></li>
                 @if (Session["Name"] != null)
                 {
-                    <li><a href="">My Profile</a></li>
-                    <li><a href="">My Post</a></li>
+                    <li><a href="/user/editprofile">My Profile</a></li>
+                    <li><a href="/user/mypost">My Post</a></li>
                 }
 
-                <li><a href="">Resort</a></li>
+                
                 <li><a href="">ShopHobe</a></li>
                 <li><a href="">RentHobe</a></li>
                 <li><a href="">Contact Us</a></li>
