--- a/Investrosite/Views/Admin/Entrepreneurlist.cshtml
+++ b/Investrosite/Views/Admin/Entrepreneurlist.cshtml
@@ -26,7 +26,7 @@
                         <td> @p.Phone</td>
                         <td> @p.Role</td>
                         <td><a href="/Admin/Edit/@p.Id">Edit</a></td>
-                        <td><a href="/Admin/delete/@p.Id">Delete</a></td>
+                        <td><a href="/Admin/DeleteEntrepreneur/@p.Id">Delete</a></td>
                     </tr>
                  }
                 </table>
