--- a/Investrosite/Views/Admin/Investorlist.cshtml
+++ b/Investrosite/Views/Admin/Investorlist.cshtml
@@ -27,7 +27,7 @@
                         <td> @p.Phone</td>
                         <td> @p.Role</td>
                         <td><a href="/Admin/Edit/@p.Id">Edit</a></td>
-                        <td><a href="/Admin/delete/@p.Id">Delete</a></td>
+                        <td><a href="/Admin/DeleteInvestor/@p.Id">Delete</a></td>
                     </tr>
                  }
             </table>
