--- a/Investrosite/Views/Admin/Managerlist.cshtml
+++ b/Investrosite/Views/Admin/Managerlist.cshtml
@@ -27,8 +27,8 @@
                         <td> @p.Email</td>
                         <td> @p.Phone</td>
                         <td> @p.Role</td>
-                        <td><a href="/Admin/Edit/@p.Id">Edit</a></td>
-                        <td><a href="/Admin/delete/@p.Id">Delete</a></td>
+                        <td><a href="/Admin/EditManager/@p.Id">Edit</a></td>
+                        <td><a href="/Admin/DeleteManager/@p.Id">Delete</a></td>
                     </tr>
                 }
                 </table>
