--- a/Investrosite/Views/Admin/Adminlist.cshtml
+++ b/Investrosite/Views/Admin/Adminlist.cshtml
@@ -27,8 +27,8 @@
                         <td> @p.Email</td>
                         <td> @p.Phone</td>
                         <td> @p.Role</td>
-                        <td><a href="/Admin/Edit/@p.Id">Edit</a></td>
-                        <td><a href="/Admin/delete/@p.Id">Delete</a></td>
+                        <td><a href="/Admin/EditAdmin/@p.Id">Edit</a></td>
+                        <td><a href="/Admin/DeleteAdmin/@p.Id">Delete</a></td>
                     </tr>
                 }
             </table>
